--- a/NestContact/NestContact/Supporting Files/NestContact-Info.plist
+++ b/NestContact/NestContact/Supporting Files/NestContact-Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>小东是SB</string>
+	<string>Déjà vu</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.redatoms.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.redatoms.beatmasterYDSD</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
